blocks/helloworld/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  labels:
    app: helloworld
    layer: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld
          image: us.gcr.io/eventstack-stg/helloworld:9819e42
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
