blocks/helloworld/k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
      name: http
  selector:
    app: helloworld
  sessionAffinity: None
  type: ClusterIP
