blocks/helloworld/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: helloworld-ingress
spec:
  rules:
    - host: apps.staqlabs.com
      http:
        paths:
          - path: /
            backend:
              serviceName: helloworld
              servicePort: 80
